--- a/index.css
+++ b/index.css
@@ -1,4 +1,9 @@
 .big-title{
 	font-family: "Times New Roman"
-	font-size:250%;
+	font-size:300%;
+}
+
+p {
+        font-size: 3em;
+	font-family: "Times New Roman"
 }
