--- a/index.css
+++ b/index.css
@@ -1,9 +1,9 @@
 .big-title{
-	font-family: "Times New Roman"
+	font-family: "Times New Roman";
 	font-size:500%;
 }
 
 .guidence{
         font-size: 500%;
-	font-family: "Times New Roman"
+	font-family: "Times New Roman";
 }
