--- a/my project.css
+++ b/my project.css
@@ -1,4 +1,12 @@
- .navbar {
+  p {font-size: 16px;}
+  .margin {margin-bottom: 45px;}
+  .bg-1 { 
+      background-color: #1abc9c; /* Green */
+      color: #ffffff;
+  } 
+
+
+.navbar {
       padding-top: 15px;
       padding-bottom: 15px;
       border: 0;
