--- a/my project.css
+++ b/my project.css
@@ -5,6 +5,11 @@
       color: #ffffff;
   } 
 
+ .container-fluid {
+      padding-top: 70px;
+      padding-bottom: 70px;
+  }
+
 
 .navbar {
       padding-top: 15px;
