--- a/my project.css
+++ b/my project.css
@@ -5,6 +5,11 @@
       color: #ffffff;
   } 
 
+ .bg-2 { 
+      background-color: #474e5d; /* Dark Blue */
+      color: #ffffff;
+  }
+
  .container-fluid {
       padding-top: 70px;
       padding-bottom: 70px;
