--- a/index.css
+++ b/index.css
@@ -17,6 +17,10 @@
       background-color: #2f2f2f; /* Black Gray */
       color: #fff;
   }
+  .bg-4 { 
+      background-color: #91e1f7; /* Light Blue */
+      color: #fff;
+  }
   .container-fluid {
       padding-top: 70px;
       padding-bottom: 70px;
