--- a/my project.css
+++ b/my project.css
@@ -9,10 +9,18 @@
       background-color: #474e5d; /* Dark Blue */
       color: #ffffff;
   }
+  .bg-3 { 
+      background-color: #2f2f2f; /* Black Gray */
+      color: #fff;
+  }
+  .bg-4 { 
+      background-color: #91e1f7; /* Light Blue */
+      color: #fff;
+  }
 
  .container-fluid {
-      padding-top: 70px;
-      padding-bottom: 70px;
+      padding-top: 20px;
+      padding-bottom: 20px;
   }
 
 
